Adding/editing budgets

--- a/client/src/app/pages/login/login.component.html
+++ b/client/src/app/pages/login/login.component.html
@@ -1,3 +1,9 @@
-<a class="btn btn-primary" href="/api/login/nextcloud">
-  Login
-</a>
+<div class="container-fluid d-flex flex-column justify-content-center align-items-center" style="height: 100vh">
+  <div class="card">
+    <img src="assets/images/bushy.jpg" class="card-img-top" alt="Bushy">
+    <div class="card-body d-flex flex-column align-items-stretch">
+      <h2 class="card-title text-center">DraperWeb</h2>
+      <a class="btn btn-primary" href="/api/social/login/nextcloud?next=/"> Login </a>
+    </div>
+  </div>
+</div>
