--- a/client/src/app/modules/budgets/pages/budget-list/budget-list.component.html
+++ b/client/src/app/modules/budgets/pages/budget-list/budget-list.component.html
@@ -46,6 +46,7 @@
           bsDaterangepicker
           formControlName="date"
           [bsConfig]="rangePickerConfig"
+          triggers="click,focus"
         />
       </div>
       <button
