--- a/client/src/app/modules/dashboard/pages/dashboard/dashboard.component.html
+++ b/client/src/app/modules/dashboard/pages/dashboard/dashboard.component.html
@@ -10,7 +10,7 @@
       <div class="row">
         <div class="col-lg-6 col-12 mb-3 mb-lg-0">
           <h5 class="text-black-50 text-center text-lg-start">Draper Ecosystem</h5>
-          <div class="row d-flex flex-row justify-content-center gap-3">
+          <div class="row d-flex flex-row justify-content-center justify-content-lg-start gap-3">
             <a
               class="card shadow-sm shortcut d-flex flex-column justify-content-center align-items-center gap-2 text-black text-decoration-none"
               [href]="shortcut.url"
