--- a/client/src/app/modules/budgets/modals/budget-add-edit/budget-add-edit.component.html
+++ b/client/src/app/modules/budgets/modals/budget-add-edit/budget-add-edit.component.html
@@ -21,7 +21,7 @@
       <input
         type="text"
         name="budget-date"
-        autocomplete="none"
+        autocomplete="off"
         formControlName="date"
         class="form-control"
         placeholder="Budget Dates"
