--- a/client/src/app/modules/budgets/modals/budget-add-edit/budget-add-edit.component.html
+++ b/client/src/app/modules/budgets/modals/budget-add-edit/budget-add-edit.component.html
@@ -14,7 +14,7 @@
     <div class="input-group">
       <i class="bi-pencil input-group-text"></i>
       <input type="text" name="budget-name" autocomplete="none" formControlName="name" class="form-control"
-             placeholder="Budget Name"/>
+             placeholder="Budget Name" appAutofocus />
     </div>
     <div class="input-group">
       <i class="bi-calendar input-group-text"></i>
