--- a/client/src/styles/bs-theme.scss
+++ b/client/src/styles/bs-theme.scss
@@ -45,6 +45,8 @@ $input-focus-width: 1px;
 @import 'bootstrap/scss/images';
 @import 'bootstrap/scss/modal';
 @import 'bootstrap/scss/button-group';
+@import 'bootstrap/scss/pagination';
+@import 'bootstrap/scss/dropdown';
 
 // Datepicker override
 .bs-datepicker-head {
