--- a/client/src/app/modules/budgets/pages/budget-list/budget-list.component.html
+++ b/client/src/app/modules/budgets/pages/budget-list/budget-list.component.html
@@ -12,30 +12,13 @@
       (click)="filtersCollapsed = !filtersCollapsed"
     ></i>
   </div>
-  <div
-    class="card-body"
-    id="filter-body"
-    [collapse]="filtersCollapsed"
-    [isAnimated]="true"
-  >
+  <div class="card-body" id="filter-body" [collapse]="filtersCollapsed" [isAnimated]="true">
     <div class="d-flex flex-column flex-lg-row gap-3">
       <div class="input-group">
         <i class="bi-search input-group-text"></i>
-        <input
-          type="text"
-          class="form-control"
-          placeholder="Search"
-          aria-label="Search"
-          [formControl]="searchControl"
-        />
+        <input type="text" class="form-control" placeholder="Search" aria-label="Search" [formControl]="searchControl" />
       </div>
-      <input
-        type="number"
-        class="form-control"
-        placeholder="Year"
-        aria-label="Year"
-        formControlName="year"
-      />
+      <input type="number" class="form-control" placeholder="Year" aria-label="Year" formControlName="year" />
       <div class="input-group">
         <i class="input-group-text bi-calendar"></i>
         <input
@@ -49,13 +32,7 @@
           triggers="click,focus"
         />
       </div>
-      <button
-        class="btn btn-danger align-self-end flex-shrink-1"
-        type="reset"
-        [disabled]="!filterForm.dirty"
-      >
-        Clear
-      </button>
+      <button class="btn btn-danger align-self-end flex-shrink-1" type="reset" [disabled]="!filterForm.dirty">Clear</button>
     </div>
   </div>
 </form>
@@ -84,11 +61,7 @@
           </div>
         </td>
       </tr>
-      <tr
-        *ngFor="let budget of budgets$ | async"
-        [hidden]="loading"
-        [routerLink]="[budget.id]"
-      >
+      <tr *ngFor="let budget of budgets$ | async" [hidden]="loading" [routerLink]="[budget.id]">
         <td>{{ budget.name }}</td>
         <td *ngIf="budget.startDate; else noStartDate">
           {{ budget.startDate | date }}
@@ -122,11 +95,7 @@
               attr.aria-labelledby="budget-{{ budget.id }}-action-btn"
             >
               <li role="menuitem">
-                <button
-                  type="button"
-                  class="dropdown-item"
-                  (click)="editBudget(budget)"
-                >
+                <button type="button" class="dropdown-item" (click)="editBudget(budget)">
                   <i class="bi-pencil me-1"></i>
                   Edit
                 </button>
@@ -141,4 +110,77 @@
       </tr>
     </tbody>
   </table>
+  <pagination
+    [hidden]="response.numPages === 1"
+    class="float-end"
+    *ngIf="budgetResponse$ | async as response"
+    [itemsPerPage]="response.pageSize"
+    [totalItems]="response.count"
+    [boundaryLinks]="true"
+    [maxSize]="5"
+    firstText="&laquo;"
+    lastText="&raquo;"
+    nextText="&rsaquo;"
+    previousText="&lsaquo;"
+    [(ngModel)]="page"
+  ></pagination>
 </div>
+<h2 class="mb-4">Categories</h2>
+<div class="row mb-3">
+  <div class="col-12">
+    <div class="input-group">
+      <i class="bi-search input-group-text"></i>
+      <input
+        type="text"
+        class="form-control"
+        placeholder="Search"
+        aria-label="Search"
+        [formControl]="categorySearchControl"
+        autocomplete="off"
+      />
+    </div>
+  </div>
+</div>
+<div class="table-responsive">
+  <table class="table table-hover table-borderless">
+    <thead>
+      <tr>
+        <th scope="col">Name</th>
+        <th scope="col">Description</th>
+        <th scope="col">
+          Icon
+          <button type="button" class="btn btn-sm btn-outline-success rounded-circle float-end" (click)="addCategory()">
+            <i class="bi-plus"></i>
+          </button>
+        </th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let category of categories$ | async" (click)="editCategory(category)">
+        <td>
+          {{ category.name }}
+        </td>
+        <td>
+          {{ category.description }}
+        </td>
+        <td>
+          <i class="{{ category.icon }} mr-2"></i>
+          {{ category.icon }}
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+<pagination
+  *ngIf="categoryResponse$ | async as response"
+  [itemsPerPage]="response.pageSize"
+  [totalItems]="response.count"
+  [(ngModel)]="categoryPage"
+  [boundaryLinks]="true"
+  [maxSize]="5"
+  firstText="&laquo;"
+  lastText="&raquo;"
+  nextText="&rsaquo;"
+  previousText="&lsaquo;"
+  [hidden]="response.numPages === 1"
+></pagination>
