--- a/client/src/app/modules/budgets/pages/budget-detail/budget-detail.component.html
+++ b/client/src/app/modules/budgets/pages/budget-detail/budget-detail.component.html
@@ -11,7 +11,7 @@
       </h1>
     </div>
     <div class="col-2 col-lg-3">
-      <button class="btn btn-success float-end rounded-circle" (click)="addColumn()" tooltip="Add Column">
+      <button class="btn btn-sm btn-success float-end rounded-circle" (click)="addColumn()" tooltip="Add Column">
         <i class="bi-plus"></i>
       </button>
     </div>
