--- a/client/src/app/modules/budgets/modals/item-add-edit/item-add-edit.component.html
+++ b/client/src/app/modules/budgets/modals/item-add-edit/item-add-edit.component.html
@@ -6,7 +6,7 @@
   <div class="modal-body d-flex flex-column gap-3">
     <div class="input-group">
       <i class="input-group-text bi-pencil"></i>
-      <input type="text" name="budget-item-name" formControlName="name" class="form-control" placeholder="Name"/>
+      <input type="text" name="budget-item-name" formControlName="name" class="form-control" placeholder="Name" />
     </div>
     <div class="form-group d-flex flex-column align-items-stretch">
       <div class="btn-group" btnRadioGroup formControlName="mode">
@@ -16,8 +16,23 @@
     </div>
     <div class="input-group align-self-center">
       <span class="input-group-text">R</span>
-      <input type="number" name="budget-item-amount" formControlName="amount" class="form-control"
-             placeholder="Amount"/>
+      <input type="number" name="budget-item-amount" formControlName="amount" class="form-control" placeholder="Amount" />
+    </div>
+    <div class="input-group">
+      <ng-template #categoryTemplate let-item="item">
+        <i class="{{ item.icon }} me-3"></i>
+        <span>{{ item.name }}</span>
+      </ng-template>
+      <i class="bi-box input-group-text"></i>
+      <input
+        type="text"
+        name="budget-item-category"
+        formControlName="category"
+        class="form-control"
+        placeholder="Category"
+        [appEntityAutocomplete]="categoryService"
+        [itemTemplate]="categoryTemplate"
+      />
     </div>
   </div>
   <div class="modal-footer">
