--- a/client/src/app/pages/login/login.component.html
+++ b/client/src/app/pages/login/login.component.html
@@ -3,7 +3,7 @@
     <img src="assets/images/bushy.jpg" class="card-img-top" alt="Bushy">
     <div class="card-body d-flex flex-column align-items-stretch">
       <h2 class="card-title text-center">DraperWeb</h2>
-      <a class="btn btn-primary" href="/api/social/login/nextcloud?next=/"> Login </a>
+      <button class="btn btn-primary" (click)="login()"> Login </button>
     </div>
   </div>
 </div>
