--- a/client/src/styles/bs-theme.scss
+++ b/client/src/styles/bs-theme.scss
@@ -47,6 +47,7 @@ $input-focus-width: 1px;
 @import 'bootstrap/scss/button-group';
 @import 'bootstrap/scss/pagination';
 @import 'bootstrap/scss/dropdown';
+@import 'bootstrap/scss/alert';
 
 // Datepicker override
 .bs-datepicker-head {
