--- a/client/src/app/pages/authenticated/authenticated.component.html
+++ b/client/src/app/pages/authenticated/authenticated.component.html
@@ -45,10 +45,7 @@
           </button>
         </div>
         <div class="col-lg-8 offset-lg-1 col-8">
-          <div class="input-group">
-            <i class="input-group-text bi-search"></i>
-            <input type="text" class="form-control" placeholder="Search" aria-label="Search bar" />
-          </div>
+          <app-form-field label="Search" icon="search"></app-form-field>
         </div>
         <div class="col-2"></div>
       </div>
