--- a/client/src/app/modules/budgets/modals/column-add-edit/column-add-edit.component.html
+++ b/client/src/app/modules/budgets/modals/column-add-edit/column-add-edit.component.html
@@ -7,10 +7,7 @@
     <button type="button" class="btn btn-close" aria-label="Close" (click)="close()"></button>
   </div>
   <div class="modal-body d-flex flex-column gap-3">
-    <div class="input-group">
-      <i class="bi-pencil input-group-text"></i>
-      <input class="form-control" name="column-name" formControlName="name" placeholder="Column Name"/>
-    </div>
+    <app-form-field label="Column Name" name="column-name" formControlName="name"></app-form-field>
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-default" (click)="close()">Cancel</button>
