--- a/client/src/app/modules/budgets/modals/item-add-edit/item-add-edit.component.html
+++ b/client/src/app/modules/budgets/modals/item-add-edit/item-add-edit.component.html
@@ -4,36 +4,26 @@
     <button class="btn btn-close" type="button" (click)="close()"></button>
   </div>
   <div class="modal-body d-flex flex-column gap-3">
-    <div class="input-group">
-      <i class="input-group-text bi-pencil"></i>
-      <input type="text" name="budget-item-name" formControlName="name" class="form-control" placeholder="Name" />
-    </div>
+    <app-form-field label="Name" formControlName="name" name="budget-item-name"></app-form-field>
     <div class="form-group d-flex flex-column align-items-stretch">
       <div class="btn-group" btnRadioGroup formControlName="mode">
         <label btnRadio="expense" class="btn btn-primary mb-0">Expense</label>
         <label btnRadio="income" class="btn btn-primary mb-0">Income</label>
       </div>
     </div>
-    <div class="input-group align-self-center">
-      <span class="input-group-text">R</span>
-      <input type="number" name="budget-item-amount" formControlName="amount" class="form-control" placeholder="Amount" />
-    </div>
-    <div class="input-group">
-      <ng-template #categoryTemplate let-item="item">
-        <i class="{{ item.icon }} me-3"></i>
-        <span>{{ item.name }}</span>
-      </ng-template>
-      <i class="bi-box input-group-text"></i>
-      <input
-        type="text"
-        name="budget-item-category"
-        formControlName="category"
-        class="form-control"
-        placeholder="Category"
-        [appEntityAutocomplete]="categoryService"
-        [itemTemplate]="categoryTemplate"
-      />
-    </div>
+    <app-form-field label="Amount" formControlName="amount" name="budget-item-amount" type="number" leadingText="R"></app-form-field>
+    <ng-template #categoryTemplate let-item="item">
+      <i class="{{ item.icon }} me-3"></i>
+      <span>{{ item.name }}</span>
+    </ng-template>
+    <app-form-field
+      label="Category"
+      formControlName="category"
+      name="budget-item-category"
+      [appEntityAutocomplete]="categoryService"
+      [itemTemplate]="categoryTemplate"
+      [icon]="form.value.category ? form.value.category['icon'] : undefined"
+    ></app-form-field>
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-danger me-auto" (click)="delete()">Delete</button>
