--- a/client/src/app/modules/budgets/pages/budget-list/budget-list.component.html
+++ b/client/src/app/modules/budgets/pages/budget-list/budget-list.component.html
@@ -1,187 +1,168 @@
 <h1 class="mb-5">Budgets</h1>
-<form class="card mb-3" [formGroup]="filterForm">
-  <div
-    class="card-header d-flex align-items-center justify-content-between"
-    [class.collapsed]="filtersCollapsed"
-    (click)="filtersCollapsed = !filtersCollapsed"
-  >
-    <h3 class="card-title mt-2">Filters</h3>
-    <i
-      class="bi-chevron-{{ filtersCollapsed ? 'down' : 'up' }}"
-      [attr.aria-expanded]="!filtersCollapsed"
-      (click)="filtersCollapsed = !filtersCollapsed"
-    ></i>
-  </div>
-  <div class="card-body" id="filter-body" [collapse]="filtersCollapsed" [isAnimated]="true">
-    <div class="d-flex flex-column flex-lg-row gap-3">
-      <div class="input-group">
-        <i class="bi-search input-group-text"></i>
-        <input type="text" class="form-control" placeholder="Search" aria-label="Search" [formControl]="searchControl" />
-      </div>
-      <input type="number" class="form-control" placeholder="Year" aria-label="Year" formControlName="year" />
-      <div class="input-group">
-        <i class="input-group-text bi-calendar"></i>
-        <input
-          type="text"
-          class="form-control"
-          placeholder="Dates"
-          aria-label="Dates"
-          bsDaterangepicker
-          formControlName="date"
-          [bsConfig]="rangePickerConfig"
-          triggers="click,focus"
-        />
-      </div>
-      <button class="btn btn-danger align-self-end flex-shrink-1" type="reset" [disabled]="!filterForm.dirty">Clear</button>
-    </div>
-  </div>
-</form>
-<div class="table-responsive">
-  <table class="table table-hover table-borderless" aria-label="List of Budgets">
-    <thead>
-      <tr>
-        <th scope="col">Name</th>
-        <th scope="col">Start</th>
-        <th scope="col">End</th>
-        <th scope="col" class="text-end">
-          <button class="btn btn-sm btn-outline-success" (click)="addBudget()">
-            <i class="bi-plus"></i>
-          </button>
-        </th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td colspan="4" [hidden]="!loading">
-          <div class="d-flex justify-content-center align-items-center gap-4">
-            <h6 class="m-0">Loading...</h6>
-            <div class="spinner-border text-primary">
-              <span class="visually-hidden">Loading...</span>
-            </div>
-          </div>
-        </td>
-      </tr>
-      <tr *ngFor="let budget of budgets$ | async" [hidden]="loading" [routerLink]="[budget.id]">
-        <td>{{ budget.name }}</td>
-        <td *ngIf="budget.startDate; else noStartDate">
-          {{ budget.startDate | date }}
-        </td>
-        <ng-template #noStartDate>
-          <td>N/A</td>
-        </ng-template>
-        <td *ngIf="budget.endDate; else noEndDate">
-          {{ budget.endDate | date }}
-        </td>
-        <ng-template #noEndDate>
-          <td>N/A</td>
-        </ng-template>
-        <th scope="row" class="d-flex flex-row gap-2 justify-content-end">
-          <div dropdown container="body" placement="bottom right">
-            <button
-              class="btn btn-sm"
-              dropdownToggle
-              type="button"
-              id="budget-{{ budget.id }}-action-btn"
-              (click)="$event.cancelBubble = true"
-              attr.aria-controls="budget-{{ budget.id }}-dropdown"
-            >
-              <i class="bi-three-dots-vertical"></i>
+<tabset>
+  <tab heading="Budgets">
+    <div class="container-fluid px-0 px-lg-1">
+      <form class="row mb-3 mt-3" [formGroup]="filterForm">
+        <div class="col-12" id="filter-body">
+          <div class="d-flex flex-column flex-lg-row gap-3 align-items-lg-center">
+            <app-form-field class="flex-grow-1" label="Search" [formControl]="searchControl" icon="search"></app-form-field>
+            <app-form-field class="flex-grow-1" label="Year" type="number" formControlName="year"></app-form-field>
+            <app-form-field
+              class="flex-grow-1"
+              icon="calendar"
+              label="Dates"
+              type="text"
+              formControlName="date"
+              [dateRangePicker]="true"
+            ></app-form-field>
+            <button class="btn btn-danger align-self-end align-self-lg-auto flex-shrink-1" type="reset" [disabled]="!filterForm.dirty">
+              Clear
             </button>
-            <ul
-              *dropdownMenu
-              id="budget-{{ budget.id }}-dropdown"
-              class="dropdown-menu dropdown-menu-right"
-              role="menu"
-              attr.aria-labelledby="budget-{{ budget.id }}-action-btn"
-            >
-              <li role="menuitem">
-                <button type="button" class="dropdown-item" (click)="editBudget(budget)">
-                  <i class="bi-pencil me-1"></i>
-                  Edit
-                </button>
-                <button type="button" class="dropdown-item text-danger">
-                  <i class="bi-trash me-1"></i>
-                  Delete
-                </button>
-              </li>
-            </ul>
           </div>
-        </th>
-      </tr>
-    </tbody>
-  </table>
-  <pagination
-    [hidden]="response.numPages === 1"
-    class="float-end"
-    *ngIf="budgetResponse$ | async as response"
-    [itemsPerPage]="response.pageSize"
-    [totalItems]="response.count"
-    [boundaryLinks]="true"
-    [maxSize]="5"
-    firstText="&laquo;"
-    lastText="&raquo;"
-    nextText="&rsaquo;"
-    previousText="&lsaquo;"
-    [(ngModel)]="page"
-  ></pagination>
-</div>
-<h2 class="mb-4">Categories</h2>
-<div class="row mb-3">
-  <div class="col-12">
-    <div class="input-group">
-      <i class="bi-search input-group-text"></i>
-      <input
-        type="text"
-        class="form-control"
-        placeholder="Search"
-        aria-label="Search"
-        [formControl]="categorySearchControl"
-        autocomplete="off"
-      />
+        </div>
+      </form>
+      <div class="table-responsive">
+        <table class="table table-hover table-borderless" aria-label="List of Budgets">
+          <thead>
+          <tr>
+            <th scope="col">Name</th>
+            <th scope="col">Start</th>
+            <th scope="col">End</th>
+            <th scope="col" class="text-end">
+              <button class="btn btn-sm btn-outline-success" (click)="addBudget()">
+                <i class="bi-plus"></i>
+              </button>
+            </th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr>
+            <td colspan="4" [hidden]="!loading">
+              <div class="d-flex justify-content-center align-items-center gap-4">
+                <h6 class="m-0">Loading...</h6>
+                <div class="spinner-border text-primary">
+                  <span class="visually-hidden">Loading...</span>
+                </div>
+              </div>
+            </td>
+          </tr>
+          <tr *ngFor="let budget of budgets$ | async" [hidden]="loading" [routerLink]="[budget.id]">
+            <td>{{ budget.name }}</td>
+            <td *ngIf="budget.startDate; else noStartDate">
+              {{ budget.startDate | date }}
+            </td>
+            <ng-template #noStartDate>
+              <td>N/A</td>
+            </ng-template>
+            <td *ngIf="budget.endDate; else noEndDate">
+              {{ budget.endDate | date }}
+            </td>
+            <ng-template #noEndDate>
+              <td>N/A</td>
+            </ng-template>
+            <th scope="row" class="d-flex flex-row gap-2 justify-content-end">
+              <div dropdown container="body" placement="bottom right">
+                <button
+                  class="btn btn-sm"
+                  dropdownToggle
+                  type="button"
+                  id="budget-{{ budget.id }}-action-btn"
+                  (click)="$event.cancelBubble = true"
+                  attr.aria-controls="budget-{{ budget.id }}-dropdown"
+                >
+                  <i class="bi-three-dots-vertical"></i>
+                </button>
+                <ul
+                  *dropdownMenu
+                  id="budget-{{ budget.id }}-dropdown"
+                  class="dropdown-menu dropdown-menu-right"
+                  role="menu"
+                  attr.aria-labelledby="budget-{{ budget.id }}-action-btn"
+                >
+                  <li role="menuitem">
+                    <button type="button" class="dropdown-item" (click)="editBudget(budget)">
+                      <i class="bi-pencil me-1"></i>
+                      Edit
+                    </button>
+                    <button type="button" class="dropdown-item text-danger">
+                      <i class="bi-trash me-1"></i>
+                      Delete
+                    </button>
+                  </li>
+                </ul>
+              </div>
+            </th>
+          </tr>
+          </tbody>
+        </table>
+        <pagination
+          [hidden]="response.numPages === 1"
+          class="float-end"
+          *ngIf="budgetResponse$ | async as response"
+          [itemsPerPage]="response.pageSize"
+          [totalItems]="response.count"
+          [boundaryLinks]="true"
+          [maxSize]="5"
+          firstText="&laquo;"
+          lastText="&raquo;"
+          nextText="&rsaquo;"
+          previousText="&lsaquo;"
+          [(ngModel)]="page"
+        ></pagination>
+      </div>
     </div>
-  </div>
-</div>
-<div class="table-responsive">
-  <table class="table table-hover table-borderless" aria-label="List of Categories">
-    <thead>
-      <tr>
-        <th scope="col">Name</th>
-        <th scope="col">Description</th>
-        <th scope="col">
-          Icon
-          <button type="button" class="btn btn-sm btn-outline-success rounded-circle float-end" (click)="addCategory()">
-            <i class="bi-plus"></i>
-          </button>
-        </th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let category of categories$ | async" (click)="editCategory(category)">
-        <td>
-          {{ category.name }}
-        </td>
-        <td>
-          {{ category.description }}
-        </td>
-        <td>
-          <i class="{{ category.icon }} mr-2"></i>
-          {{ category.icon }}
-        </td>
-      </tr>
-    </tbody>
-  </table>
-</div>
-<pagination
-  *ngIf="categoryResponse$ | async as response"
-  [itemsPerPage]="response.pageSize"
-  [totalItems]="response.count"
-  [(ngModel)]="categoryPage"
-  [boundaryLinks]="true"
-  [maxSize]="5"
-  firstText="&laquo;"
-  lastText="&raquo;"
-  nextText="&rsaquo;"
-  previousText="&lsaquo;"
-  [hidden]="response.numPages === 1"
-  class="float-end"
-></pagination>
+  </tab>
+  <tab heading="Categories">
+    <div class="container-fluid px-0 px-lg-1">
+      <div class="row mb-3 mt-3">
+        <div class="col-12">
+          <app-form-field label="Search" autocomplete="off" [formControl]="categorySearchControl" icon="search"></app-form-field>
+        </div>
+      </div>
+      <div class="table-responsive">
+        <table class="table table-hover table-borderless" aria-label="List of Categories">
+          <thead>
+          <tr>
+            <th scope="col">Name</th>
+            <th scope="col">Description</th>
+            <th scope="col">
+              Icon
+              <button type="button" class="btn btn-sm btn-outline-success rounded-circle float-end" (click)="addCategory()">
+                <i class="bi-plus"></i>
+              </button>
+            </th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr *ngFor="let category of categories$ | async" (click)="editCategory(category)">
+            <td>
+              {{ category.name }}
+            </td>
+            <td>
+              {{ category.description }}
+            </td>
+            <td>
+              <i class="{{ category.icon }} mr-2"></i>
+              {{ category.icon }}
+            </td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
+      <pagination
+        *ngIf="categoryResponse$ | async as response"
+        [itemsPerPage]="response.pageSize"
+        [totalItems]="response.count"
+        [(ngModel)]="categoryPage"
+        [boundaryLinks]="true"
+        [maxSize]="5"
+        firstText="&laquo;"
+        lastText="&raquo;"
+        nextText="&rsaquo;"
+        previousText="&lsaquo;"
+        [hidden]="response.numPages === 1"
+        class="float-end"
+      ></pagination>
+    </div>
+  </tab>
+</tabset>
