Importing + small fixes

--- a/client/src/app/modules/budgets/components/column-detail/column-detail.component.html
+++ b/client/src/app/modules/budgets/components/column-detail/column-detail.component.html
@@ -27,7 +27,7 @@
               <td>{{ item.name }}</td>
               <td>
                 <ng-container *ngIf="item.category; else noCategory">
-                  <ng-container *ngIf="getCategory(item.category) | async as category; else noCategory">
+                  <ng-container *ngIf="item.category as category; else noCategory">
                     <i class="me-3" [class]="category.icon"></i>
                     <span>{{ category.name }}</span>
                   </ng-container>
