--- a/client/src/app/modules/budgets/pages/budget-list/budget-list.component.html
+++ b/client/src/app/modules/budgets/pages/budget-list/budget-list.component.html
@@ -84,7 +84,11 @@
                       <i class="bi-pencil me-1"></i>
                       Edit
                     </button>
-                    <button type="button" class="dropdown-item text-danger">
+                    <button type="button" class="dropdown-item" (click)="importBudget(budget)">
+                      <i class="bi-download me-1"></i>
+                      Import
+                    </button>
+                    <button type="button" class="dropdown-item text-danger" (click)="removeBudget(budget)">
                       <i class="bi-trash me-1"></i>
                       Delete
                     </button>
